1021: Fix overlap of footer and navigation items on pois desktop

--- a/web/src/styles/MapView.css
+++ b/web/src/styles/MapView.css
@@ -15,4 +15,5 @@
 .maplibregl-ctrl-top-left,
 .maplibregl-ctrl-top-right {
   z-index: 0;
+  margin-bottom: 48px;
 }
